[gd_scene load_steps=8 format=3 uid="uid://bqk8nan7p4rx2"]

[ext_resource type="PackedScene" uid="uid://c8canob25lyi" path="res://scenes/components/player.tscn" id="1_player"]
[ext_resource type="Script" path="res://scripts/presentation_scene.gd" id="2_script"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.1, 0.1, 1)
ambient_light_energy = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(20, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="Material_floor"]
albedo_color = Color(0.2, 0.2, 0.25, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_trigger"]
size = Vector3(4, 2, 4)

[node name="PresentationScene" type="Node3D"]
script = ExtResource("2_script")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)
light_energy = 0.5
shadow_enabled = true

[node name="Floor" type="StaticBody3D" parent="."]

[node name="FloorMesh" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("Material_floor")

[node name="FloorCollision" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="PresentationScreen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -8)
mesh = SubResource("BoxMesh_floor")

[node name="ScreenLight" type="OmniLight3D" parent="PresentationScreen"]
light_color = Color(0.8, 0.1, 0.1, 1)
light_energy = 2.0
omni_range = 15.0

[node name="Player" parent="." instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 5)

[node name="TriggerArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="TriggerCollision" type="CollisionShape3D" parent="TriggerArea"]
shape = SubResource("BoxShape3D_trigger")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InstructionLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
text = "Walk towards the presentation screen to begin your mission"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PresentationUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NarrationText" type="RichTextLabel" parent="UI/PresentationUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -50.0
bbcode_enabled = true
text = ""
fit_content = true
modulate = Color(1, 1, 1, 0.9)

[node name="FadeOverlay" type="ColorRect" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
